# RubiksCubeSolver

./: CMakeLists.txt  GenericRubiksCube.cpp  GenericRubiksCube.h  README.md  RubiksCube3dArray.cpp  main.cpp
Model/: GenericRubiksCube.cpp  GenericRubiksCube.h  RubiksCube1dArray.cpp  RubiksCubeBitboard.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDDFSSolver.h
